# my-ai-assistant

./: .gitignore  .nojekyll  README.md  Test.ipynb  _quarto.yml  conversations-listing.qmd  index.html  index.qmd  listings.json  prompts-listing.qmd  pyproject.toml  robots.txt  search-index.json  search.json  sitemap.xml
.claude/: settings.json
.githooks/: pre-commit
.obsidian/: app.json  workspace.json
conversations/: System Prompts.qmd  Template - Conversation - Chatlas.qmd  Template - Conversation - No Prompt.qmd  Template - Conversation - ellmer.qmd  Template - Paper Revisions.md
prompts/: Quick Prompts.md  System Prompts.md  Test Prompt.md  template_prompt.md
py_scripts/: build_index.py  pyproject.toml  requirements.txt
py_scripts/py_scripts/: __init__.py  lab_remove_notes_for_students.py  lab_remove_question_answers.py  lab_remove_r_code.py  lab_update_yaml_header.py  prompt_extract_system_prompt.py  prompt_extract_user_message.py  prompt_fill_placeholders.py
r/: NOTES  file_tree.R  prompt_extract_system_prompt.R  prompt_extract_user_message.R  prompt_fill_placeholders.R  strip_yaml_header.R
snippets/: About EWB - Short.md  About Me - ADR.md  About Me - EWB.md  About Me - Long.md  About Me - Short.md  About My AI Assistant.md  _snippet-template.md  about_me.md  about_me_adr.md  about_my_ai_assistant.md
vignettes/: API vs Browser.Rmd  Claude Cowork Projects.html  Claude Cowork Projects.qmd  Interactive Chat.qmd  Projects.Rmd  Prompt Format.Rmd  Python and Chatlas.qmd  Snippets.qmd  UV Virtual Environments.qmd  Virtual Environments.qmd  git-tags.html  (+34 more)
(+293 files in other folders)
