[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "py-scripts"
version = "0.1.0"
description = "Reusable helper utilities for prompt templates and AI workflows."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["py_scripts"]
